--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -31,7 +31,7 @@ management.info.env.enabled=true
 
 eureka.client.serviceUrl.defaultZone=${DISCOVERY_URL:http://localhost:8761}/eureka/
 eureka.instance.preferIpAddress=true
-#spring.config.import=optional:configserver:${CONFIGSRV_URL:http://localhost:8888}
+spring.config.import=optional:configserver:${CONFIGSRV_URL:http://localhost:8888}
 spring.profiles.active=production
 
 spring.boot.admin.client.url=${ADMINSRV_URL:http://localhost:8081}
